# NETAI-Network-Anomaly-Detection-Models

./: .gitignore  LICENSE  Makefile  ProjectDescription.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docker/: Dockerfile  Dockerfile.gpu
docs/: architecture.md  deployment.md  models.md
k8s/: configmap.yaml  deployment.yaml  gpu-training-job.yaml  pvc.yaml  service.yaml
scripts/: evaluate.py  generate_data.py  serve.py  train.py
src/netai_anomaly/: __init__.py
src/netai_anomaly/data/: database.py  feature_engineering.py  generator.py  loader.py
src/netai_anomaly/inference/: service.py
src/netai_anomaly/models/: autoencoder.py  ensemble.py  lstm_detector.py  transformer_detector.py
src/netai_anomaly/training/: trainer.py
src/netai_anomaly/utils/: config.py  metrics.py
tests/: test_config.py  test_data.py  test_feature_engineering.py  test_inference.py  test_metrics.py  test_models.py  test_training.py
